style: aLignment fix

--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -96,3 +96,9 @@ p {
 .typeform-widget iframe {
   height: 515px !important;
 }
+
+@media (min-width: 992px) {
+  .homepage-services-offered {
+    margin-top: 10em;
+  }
+}
